# guruxone-pyserver

./: .pre-commit-config.yaml  README.md  pyproject.toml  runserver.py
guruxone/: __init__.py  api.py  database.py  models.py  schema.py
guruxone/routes/: dependancies.py  members.py
guruxone/services/: member_service.py
tests/: test_member_routes.py
